zsnes (1.510-3) unstable; urgency=low

  * New maintainer (Closes: #573418).
  * Remove useless build-deps on xlibmesa-gl-dev and xutils (Closes: #579040)
  * Add ${misc:Depends} to dependencies.
  * Add debian/watch file.
  * Add debian/source/format.
  * Add debian/README.source to document dpatch.
  * Add support for amd64 (Closes: #402104)

 -- Etienne Millon <etienne.millon@gmail.com>  Fri, 19 Nov 2010 17:06:18 +0100

zsnes (1.510-2.2) unstable; urgency=medium

  * Non-maintainer upload.
  * Fix the debian/rules clean problem, with a patch courtesy of
    Gunnar Wolf <gwolf@gwolf.org> (closes: #513205)
  * Urgency medium to fix RC bug in testing

 -- Vincent Fourmond <fourmond@debian.org>  Tue, 03 Feb 2009 21:52:28 +0100

zsnes (1.510-2.1) unstable; urgency=high

  * Non-maintainer upload.
  * Fix gcc-4.3 FTBFS (Closes: #474804).

 -- Ian Beckwith <ianb@erislabs.net>  Thu, 10 Apr 2008 22:20:59 +0100

zsnes (1.510-2) unstable; urgency=low

  * Acknowledge NMU, closes: #447366
  * Fix build failure with g++ 4.2, closes: #459033
  * Bump Standards-Version to 3.7.3
  * Move menu file from Apps to Applications. I think this closes: #443789.

 -- Joshua Kwan <joshk@triplehelix.org>  Thu, 10 Jan 2008 20:49:18 -0800

zsnes (1.510-1.1) unstable; urgency=low

  * Non-maintainer upload to fix RC bug.
  * Fix FTBFS, CRC32 is now a keyword in nasm, replace it by RomCRC32.
    Patch by Javier Serrano Polo <jasp00@terra.es>. (Closes: #447366)

 -- Ana Beatriz Guerrero Lopez <ana@debian.org>  Mon, 19 Nov 2007 03:26:31 +0100

zsnes (1.510-1) unstable; urgency=low

  * New upstream release - all patches merged. closes: #380734, #419270
  * Add a .desktop file, thanks Nicholas Wheeler. closes: #367942
  * Include a ton of documentation that ships with the tarball.
    closes: #392143 

 -- Joshua Kwan <joshk@triplehelix.org>  Mon, 04 Jun 2007 21:46:47 -0700

zsnes (1.420-1) unstable; urgency=low

  * New maintainer, acknowledge NMU. (closes: #301611, #293061)