@@ -4,7 +4,7 @@ Priority: optional
 Homepage: http://www.zsnes.com
 Maintainer: Etienne Millon <etienne.millon@gmail.com>
 Uploaders: Eshat Cakar <info@eshat.de>
-Build-Depends: dpkg-dev (>= 1.13.2), debhelper (>= 4), gcc-multilib [amd64], g++-multilib [amd64], ia32-libs-dev [amd64], nasm, libsdl1.2-dev (>= 1.2.2-3.1), zlib1g-dev [i386] | lib32z1-dev [amd64], sharutils, libpng12-dev | libpng-dev, dpatch, libao-dev [i386]
+Build-Depends: debhelper (>= 4), nasm, libsdl1.2-dev (>= 1.2.2-3.1), zlib1g-dev [i386] | lib32z1-dev [amd64], sharutils, libpng12-dev | libpng-dev, dpatch, gcc-multilib [amd64], g++-multilib [amd64], ia32-libs-dev [amd64]
 Standards-Version: 3.7.3
 
 Package: zsnes
